--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-react": "^3.1.0",
     "gulp-sass": "^2.3.2",
     "jsx-loader": "^0.13.2",
+    "postcss-loader": "^0.10.1",
     "webpack": "^1.13.1"
   }
 }
