--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Heboy",
   "dependencies": {
     "react": "^15.3.0",
+    "react-addons-shallow-compare": "^15.3.1",
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
