--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "infinite-scroll",
-  "version": "1.0.0",
+  "name": "mb-react-infinite-scroll",
+  "version": "1.1.0",
   "main": "dist/InfiniteScroll.js",
   "author": "Heboy",
   "dependencies": {
@@ -12,12 +12,11 @@
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
-    "gulp-react": "^3.1.0",
     "gulp-sass": "^2.3.2",
     "jsx-loader": "^0.13.2",
     "webpack": "^1.13.1"
